--- a/s-messenger.html
+++ b/s-messenger.html
@@ -242,7 +242,9 @@
 						return true;
 					}
 				}
-				elObj.innerText == '';
+				if(elObj){
+					elObj.innerText == '';
+				}
 				return;
 			}
 			//GLOBALVARS
