--- a/s-messenger.html
+++ b/s-messenger.html
@@ -1525,14 +1525,14 @@
 								navigator.serviceWorker.ready.then(function(registration) {
 									registration.showNotification(title, options);
 								});
-								var msgNotify = new Notification(title, options);
+								//var msgNotify = new Notification(title, options);
 							}
 							else if (Notification.permission !== "denied"){
 								Notification.requestPermission().then(function (permission) {
 									navigator.serviceWorker.ready.then(function(registration) {
 										registration.showNotification(title, options);
 									});
-									var msgNotify = new Notification(title, options);
+									//var msgNotify = new Notification(title, options);
 								});
 							}
 						}
