Added [frame] tag to suggestions

--- a/s-messenger.html
+++ b/s-messenger.html
@@ -309,7 +309,7 @@
 			var suggestcur = -1;
 			var cmds = ["/clr", "/check", "/disconnect", "/info (str)", "/refresh", "/username {str}"];
 			var cmdsEl = [];
-			var bbs = ["[aud]", "[i]", "[img]", "[n]", "[quote]", "[u]", "[small]", "[big]", "[tt]", "[notag]", "[color]", "[url]", "[vid]", "[size]", "[align]", "[b]"];
+			var bbs = ["[aud]", "[i]", "[img]", "[n]", "[quote]", "[u]", "[small]", "[big]", "[tt]", "[notag]", "[color]", "[url]", "[vid]", "[size]", "[align]", "[b]", "[frame]"];
 			bbs.sort();
 			var bbsEl = [];
 			var ddon = false;
