--- a/s-messenger.html
+++ b/s-messenger.html
@@ -209,6 +209,8 @@
 			pre {
 				overflow: auto;
 				font-weight: normal;
+				font-size: 12px;
+				cursor: url('beam.png'), auto;
 			}
 			.message:active {
 				background: #404040;
