--- a/console.html
+++ b/console.html
@@ -2,72 +2,13 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Console</title>
+		<link rel="stylesheet" type="text/css" href="commonStyles.css">
 		<style>
 			body {
-				font-family: "Courier";
-				font-size: 16px;
-				font-weight: bold;
-				color: #fff;
-				background: #000000;
-				margin: 0;
-				padding: 0;
-				overscroll-behavior: none;
-			}
-			html {
-				overflow: hidden;
-				cursor: url('cursor.png'), auto;
+				overflow: auto;
 			}
 			p {
-				margin: 0;
 				white-space: pre-wrap;
-			}
-			::-webkit-scrollbar {
-				width: 11px;
-				height: 11px;
-			}
-
-			::-webkit-scrollbar-track {
-				background: #000; 
-				border: 1px;
-				border-style: solid;
-				border-color: #898989;
-			}
-
-			::-webkit-scrollbar-thumb {
-				background: #474747; 
-			}
-
-			::-webkit-scrollbar-thumb:hover {
-				background: #555; 
-			}
-			.windowBorder {
-				min-height: 24px;
-				max-height: 24px;
-				background: #898989;
-				box-sizing: border-box;
-				width: 100%;
-				z-index: 2;
-			}
-			.windowButton {
-				margin: 0;
-				top: 0;
-				float: right;
-			}
-			.windowButton:hover, .uicheckbox:hover {
-				filter: brightness(1.3);
-			}
-			.windowButton:active, .uicheckbox:active {
-				filter: brightness(1.5);
-			}
-			
-			.option {
-				cursor: url('link.png'), auto;
-				padding: 14px;
-				display: block;
-				background: #292929;
-				color: #fff;
-				border: 1px solid #424242;
-				margin: 0;
 			}
 			
 			textarea {
@@ -86,15 +27,7 @@
 				resize: none;
 				overflow: hidden;
 			}
-			::-moz-selection { /* Code for Firefox */
-				color: #000;
-				background: #fff;
-			}
-
-			::selection {
-				color: #000;
-				background: #fff;
-			}
+			
 		</style>
 		<script>
 			var consoleInput, windowBorder, windowContent;
