--- a/s-messenger.html
+++ b/s-messenger.html
@@ -2,54 +2,8 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>S-Messenger</title>
+		<link rel="stylesheet" type="text/css" href="commonStyles.css">
 		<style>
-			body {
-				font-family: "Courier";
-				font-size: 16px;
-				font-weight: bold;
-				color: #fff;
-				background: #000000;
-				margin: 0;
-				padding: 0;
-				overscroll-behavior: none;
-				overflow: hidden;
-				position: relative;
-			}
-			html {
-				overflow: hidden;
-				cursor: url('cursor.png'), auto;
-			}
-			input{
-				cursor: url('beam.png'), auto;
-			}
-			button{
-				cursor: url('cursor.png'), auto;
-			}
-			p {
-				margin-bottom: 0;
-				margin-top: 0;
-			}
-			
-			::-webkit-scrollbar {
-				width: 11px;
-				height: 11px;
-			}
-
-			::-webkit-scrollbar-track {
-				background: #000; 
-				border: 1px;
-				border-style: solid;
-				border-color: #898989;
-			}
-
-			::-webkit-scrollbar-thumb {
-				background: #474747; 
-			}
-
-			::-webkit-scrollbar-thumb:hover {
-				background: #555; 
-			}
-			
 			.bottomui {
 				position:fixed;
 				bottom:0;
@@ -57,37 +11,6 @@
 				width: 100%;
 			}
 			
-			.inputbox {
-				padding-left: 4px;
-				background: #292929;
-				color: #fff;
-				border: none;
-				outline: none;
-				font-family: "Courier";
-				font-size: 16px;
-				font-weight: bold;
-				height: 25px;
-				width: calc(100% - 106px);
-				padding-right: 2px;
-			}
-			
-			.uibutton {
-				background: #191919;
-				border: 1px solid #424242;
-				font-family: "Courier";
-				font-size: 16px;
-				font-weight: bold;
-				color: #fff;
-				height: 25px;
-				width: 106px;
-				outline: none;
-			}
-			.uibutton:hover, .option:hover, .suggest:hover {
-				background-color: #202020;
-			}
-			.uibutton:active, .option:active, .suggest:active {
-				background: #404040;
-			}
 			.fade {
 				opacity: 1;
 				transition: opacity 1s linear;
@@ -115,14 +38,6 @@
 				opacity: 0;
 				transition: transform 0.7s linear, opacity 0.6s ease, height 0.6s ease;
 			}
-			.option {
-				cursor: url('link.png'), auto;
-				padding: 14px;
-				display: block;
-				background: #292929;
-				color: #fff;
-				border: 1px solid #424242;
-			}
 			
 			.suggest {
 				cursor: url('link.png'), auto;
@@ -133,50 +48,12 @@
 				border: 1px solid #424242;
 			}
 			
-			a:link {
-				color:SteelBlue;
-			}
-			
-			a:visited {
-				color:RoyalBlue;
-			}
-			
-			a:hover {
-				color:SkyBlue;
-			}
-			
-			a:active {
-				color:SlateGray;
-			}
-			
-			.windowBorder {
-				min-height: 24px;
-				max-height: 24px;
-				background: #898989;
-				box-sizing: border-box;
-			}
-			.windowButton {
-				margin: 0;
-				float: right;
-			}
-			.windowButton:hover, .uicheckbox:hover {
-				filter: brightness(1.3);
-			}
-			.windowButton:active, .uicheckbox:active {
-				filter: brightness(1.5);
-			}
 			.menuWindow {
 				background: #212121;
 				position: absolute;
 				z-index: 3;
 				max-width: 100%;
 				max-height: 100%;
-			}
-			hr {
-				margin: 2px;
-				background: #292929;
-				height: 2px;
-				border: none;
 			}
 			.uicheckbox {
 				min-width: 20px;
@@ -215,9 +92,6 @@
 			.message:active {
 				background: #404040;
 				color: #696969;
-			}
-			b {
-				font-weight: 900;
 			}
 		</style>
 		<script>
@@ -1756,7 +1630,7 @@
 					</div>
 				</div>
 				<div class=bottomui>
-					<input id="chatInput" class=inputbox oninput="CheckCommand(); Type();" onpaste="if(enableNTag){OnPaste(); return false;}" autocomplete="off"><button id="sendButton" class=uibutton onclick="SendClick()">Send</button>
+					<input id="chatInput" class=inputbox style="width: calc(100% - 106px);"oninput="CheckCommand(); Type();" onpaste="if(enableNTag){OnPaste(); return false;}" autocomplete="off"><button id="sendButton" class=uibutton onclick="SendClick()">Send</button>
 				</div>
 			</div>
 		</div>
